fix async js work

--- a/_components/BlockFooter/index.html
+++ b/_components/BlockFooter/index.html
@@ -1,14 +1,14 @@
-<footer class="block-footer">
+<div class="block-footer">
 
   <div class="block-footer__menu">
     <div class="block-footer__menu-wrapper">
-      <a href="{{ site.baseurl }}/" class="header__main-menu-link{% if page.url == '/'%} is-selected{% endif %}">Home</a>
-      <a href="{{ site.baseurl }}/news/" class="header__main-menu-link{% if page.url contains 'news' %} is-selected{% endif %}">News</a>
-      <a href="{{ site.baseurl }}/releases/" class="header__main-menu-link{% if page.url contains 'release' %} is-selected{% endif %}">Releases</a>
-      <a href="{{ site.baseurl }}/artists/" class="header__main-menu-link{% if page.url contains 'artist' %} is-selected{% endif %}">Artists</a>
-      <a href="{{ site.baseurl }}/events/" class="header__main-menu-link{% if page.url contains 'event' %} is-selected{% endif %}">Events</a>
-      <a href="{{ site.baseurl }}/friends/" class="header__main-menu-link{% if page.url contains 'friends' %} is-selected{% endif %}">Friends</a>
-      <a href="{{ site.baseurl }}/contacts/" class="header__main-menu-link{% if page.url contains 'contacts' %} is-selected{% endif %}">Contacts</a>
+      <a href="{{ site.baseurl }}/" class="">Home</a>
+      <a href="{{ site.baseurl }}/news/" class="">News</a>
+      <a href="{{ site.baseurl }}/releases/" class="">Releases</a>
+      <a href="{{ site.baseurl }}/artists/" class="">Artists</a>
+      <a href="{{ site.baseurl }}/events/" class="">Events</a>
+      <a href="{{ site.baseurl }}/friends/" class="">Friends</a>
+      <a href="{{ site.baseurl }}/contacts/" class="">Contacts</a>
     </div>
   </div>
 
@@ -92,5 +92,5 @@
   </div>
   {% endcomment %}
 
-</footer>
+</div>
 
