--- a/_components/BlockMainMenu/index.html
+++ b/_components/BlockMainMenu/index.html
@@ -35,9 +35,11 @@
     {% endcomment %}
   </nav>
 
+  {% comment %}
   <a href="{{ site.baseurl }}/release/va-the-ten/" class="main-menu__mob-menu-button">
     <img class="main-menu__mob-menu-button-img" src="{{ site.baseurl }}/assets/img/svg-icons/menu.svg">
   </a>
+  {% endcomment %}
 
   </div>
 </header>
