upd main release

--- a/_components/BlockMainMenu/index.html
+++ b/_components/BlockMainMenu/index.html
@@ -4,7 +4,7 @@
   {% include BlockLogolink/index.html %}
 
   <nav class="main-menu__main-menu">
-    <a href="{{ site.baseurl }}/release/va-the-ten/" class="main-menu__main-menu-link{% if page.url contains 'release' %} is-selected{% endif %}">Releases</a>
+    <a href="{{ site.baseurl }}/release/zymosis-insight/" class="main-menu__main-menu-link{% if page.url contains 'release' %} is-selected{% endif %}">Releases</a>
     {% comment %}
     <a href="{{ site.baseurl }}/news/" class="main-menu__main-menu-link{% if page.url contains 'news' %} is-selected{% endif %}">News</a>
     <a href="{{ site.baseurl }}/releases/" class="main-menu__main-menu-link{% if page.url contains 'release' %} is-selected{% endif %}">Releases</a>
@@ -36,7 +36,7 @@
   </nav>
 
   {% comment %}
-  <a href="{{ site.baseurl }}/release/va-the-ten/" class="main-menu__mob-menu-button">
+  <a href="{{ site.baseurl }}/release/zymosis-insight/" class="main-menu__mob-menu-button">
     <img class="main-menu__mob-menu-button-img" src="{{ site.baseurl }}/assets/img/svg-icons/menu.svg">
   </a>
   {% endcomment %}
