--- a/_components/PageRelease/index.html
+++ b/_components/PageRelease/index.html
@@ -10,6 +10,7 @@
             <img class="page-release__cover-img lazyload"
               src="https://content.sentimony.com/assets/img/releases/medium/{{ page.cat_no }}/{{ page.slug }}.jpg"
               data-srcset="https://content.sentimony.com/assets/img/releases/medium/{{ page.cat_no }}/{{ page.slug }}.jpg 1x, https://content.sentimony.com/assets/img/releases/medium-retina/{{ page.cat_no }}/{{ page.slug }}.jpg 2x"
+              alt="{{ page.title }} Medium Thumbnail" 
             >
           </a>
         {% else %}
