--- a/_components/BlockMainMenu/index.html
+++ b/_components/BlockMainMenu/index.html
@@ -16,15 +16,15 @@
 
   <nav class="main-menu__social-menu">
     <a class="main-menu__social-menu-link" href="https://sentimony.bandcamp.com" target="_blank">
-      <img class="main-menu__social-menu-link-img" src="{{ site.baseurl }}/assets/img/svg-icons/bandcamp.svg">
+      <img class="main-menu__social-menu-link-img" src="{{ site.baseurl }}/assets/img/svg-icons/bandcamp.svg" alt="Bandcamp Icon">
       <span class="main-menu__social-menu-link-tooltip">bandcamp</span>
     </a>
     <a class="main-menu__social-menu-link" href="https://www.facebook.com/sentimony.records" target="_blank">
-      <img class="main-menu__social-menu-link-img" src="{{ site.baseurl }}/assets/img/svg-icons/facebook.svg">
+      <img class="main-menu__social-menu-link-img" src="{{ site.baseurl }}/assets/img/svg-icons/facebook.svg" alt="Facebook Icon">
       <span class="main-menu__social-menu-link-tooltip">facebook</span>
     </a>
     <a class="main-menu__social-menu-link" href="https://www.youtube.com/c/SentimonyRecordsOfficial" target="_blank">
-      <img class="main-menu__social-menu-link-img" src="{{ site.baseurl }}/assets/img/svg-icons/youtube.svg">
+      <img class="main-menu__social-menu-link-img" src="{{ site.baseurl }}/assets/img/svg-icons/youtube.svg" alt="YouTube Icon">
       <span class="main-menu__social-menu-link-tooltip">youtube</span>
     </a>
     {% comment %}
