--- a/_components/ReleaseListSwiper/index.html
+++ b/_components/ReleaseListSwiper/index.html
@@ -9,6 +9,7 @@
               <img class="release-list-swiper__item-cover-img lazyload"
                 src="https://content.sentimony.com/assets/img/releases/small/{{ i.cat_no }}/{{ i.slug }}.jpg"
                 data-srcset="https://content.sentimony.com/assets/img/releases/small/{{ i.cat_no }}/{{ i.slug }}.jpg 1x, https://content.sentimony.com/assets/img/releases/small-retina/{{ i.cat_no }}/{{ i.slug }}.jpg 2x"
+                alt="{{ i.title }} Small Thumbnail"
               >
             {% else %}
               <div class="release-list-swiper__item-cover-coming">Artwork<br>in progress</div>
