Lihthouse: Links do not have a discernable name

--- a/_components/BlockFooter/index.html
+++ b/_components/BlockFooter/index.html
@@ -12,55 +12,7 @@
     </div>
   </div>
 
-  <div>Follow Us:</div>
-  <div class="block-footer__social">
-    <a href="https://sentimony.bandcamp.com" target="_blank">
-      <span class="icon-bandcamp"></span>
-      <span class="tooltip">bandcamp</span>
-    </a>
-    <a href="http://www.junodownload.com/labels/Sentimony/releases/?order=date_down" target="_blank">
-      <span class="icon-junodownload"></span>
-      <span class="tooltip">junodownload</span>
-    </a>
-    <a href="https://www.facebook.com/sentimony.records" target="_blank">
-      <span class="icon-facebook"></span>
-      <span class="tooltip">facebook</span>
-    </a>
-    <a href="https://www.youtube.com/c/SentimonyRecordsOfficial" target="_blank">
-      <span class="icon-youtube"></span>
-      <span class="tooltip">youtube</span>
-    </a>
-    <a href="https://soundcloud.com/sentimony" target="_blank">
-      <span class="icon-soundcloud"></span>
-      <span class="tooltip">soundcloud</span>
-    </a>
-    <a href="https://twitter.com/sentimony" target="_blank">
-        <span class="icon-twitter"></span>
-        <span class="tooltip">twitter</span>
-    </a>
-    <a href="https://plus.google.com/110805662421856505326" target="_blank">
-        <span class="icon-googleplus"></span>
-        <span class="tooltip">googleplus</span>
-    </a>
-    {% comment %}
-    <a href="https://www.mixcloud.com/sentimony" target="_blank">
-        <span class="icon-mixcloud"></span>
-        <span class="tooltip">mixcloud</span>
-    </a>
-    <a href="https://www.linkedin.com/company-beta/3256285" target="_blank">
-        <span class="icon-linkedin"></span>
-        <span class="tooltip">linkedin</span>
-    </a>
-    <a href="https://vk.com/club1342946" target="_blank">
-        <span class="icon-vkontakte"></span>
-        <span class="tooltip">vkontakte</span>
-    </a>
-    {% endcomment %}
-    <a href="https://www.discogs.com/label/82598-Sentimony-Records?sort=year&sort_order=desc&layout=big" target="_blank">
-        <span class="icon-discogs"></span>
-        <span class="tooltip">discogs</span>
-    </a>
-  </div>
+  {% include MenuSocial/index.html %}
 
   {% comment %}
   <div class="block-footer__labels">
@@ -74,7 +26,6 @@
     <div>2006 - 2017 © Sentimony Records</div>
     <div>All Rights Reserved</div>
     <div>
-      {% comment %}<span class="icon-sentimony-records-logo"></span>{% endcomment %}
       <img class="block-footer__copyright-logo" src="{{ site.baseurl }}/assets/img/svg-icons/sentimony-records-logo.svg" alt="Sentimony Records Logo SVG">
     </div>
   </div>
