rework popular -> new

--- a/_components/ReleaseListSwiper/index.html
+++ b/_components/ReleaseListSwiper/index.html
@@ -17,8 +17,8 @@
             {% if i.coming_soon %}
               <div class="release-list-swiper__item-status release-list-swiper__item-status-coming-soon">Coming Soon</div>
             {% endif %}
-            {% if i.popular %}
-              <div class="release-list-swiper__item-status release-list-swiper__item-status-popular">Popular</div>
+            {% if i.new %}
+              <div class="release-list-swiper__item-status release-list-swiper__item-status-new">New</div>
             {% endif %}
           </div>
           <div class="release-list-swiper__item-title">{{ i.title }}</div>
