--- a/_components/BlockMainMenu/index.html
+++ b/_components/BlockMainMenu/index.html
@@ -15,20 +15,20 @@
   </nav>
 
   <nav class="main-menu__social-menu">
-    <a class="main-menu__social-menu-link" href="https://sentimony.bandcamp.com" target="_blank">
+    <a class="main-menu__social-menu-link" href="https://sentimony.bandcamp.com" target="_blank" rel="noopener">
       <img class="main-menu__social-menu-link-img" src="{{ site.baseurl }}/assets/img/svg-icons/bandcamp.svg" alt="Bandcamp Icon">
       <span class="main-menu__social-menu-link-tooltip">bandcamp</span>
     </a>
-    <a class="main-menu__social-menu-link" href="https://www.facebook.com/sentimony.records" target="_blank">
+    <a class="main-menu__social-menu-link" href="https://www.facebook.com/sentimony.records" target="_blank" rel="noopener">
       <img class="main-menu__social-menu-link-img" src="{{ site.baseurl }}/assets/img/svg-icons/facebook.svg" alt="Facebook Icon">
       <span class="main-menu__social-menu-link-tooltip">facebook</span>
     </a>
-    <a class="main-menu__social-menu-link" href="https://www.youtube.com/c/SentimonyRecordsOfficial" target="_blank">
+    <a class="main-menu__social-menu-link" href="https://www.youtube.com/c/SentimonyRecordsOfficial" target="_blank" rel="noopener">
       <img class="main-menu__social-menu-link-img" src="{{ site.baseurl }}/assets/img/svg-icons/youtube.svg" alt="YouTube Icon">
       <span class="main-menu__social-menu-link-tooltip">youtube</span>
     </a>
     {% comment %}
-    <a class="main-menu__social-menu-link" href="https://soundcloud.com/sentimony" target="_blank">
+    <a class="main-menu__social-menu-link" href="https://soundcloud.com/sentimony" target="_blank" rel="noopener">
       <img class="main-menu__social-menu-link-img" src="{{ site.baseurl }}/assets/img/svg-icons/soundcloud.svg">
       <span class="main-menu__social-menu-link-tooltip">soundcloud</span>
     </a>
