--- a/_components/PageRelease/index.html
+++ b/_components/PageRelease/index.html
@@ -35,11 +35,11 @@
         <h1 class="page-release__title">{{ page.title }}</h1>
         <div class="page-release__small-info">Get it:</div>
         <div>
-          <a class="page-release__bandcamp-btn{% if page.coming_soon %} is-disabled{% endif %}" href="{% if page.coming_soon %}javascript:void(0){% else %}{{ page.link_bandcamp }}{% endif %}" target="_blank">
+          <a class="page-release__bandcamp-btn{% if page.coming_soon %} is-disabled{% endif %}" href="{% if page.coming_soon %}javascript:void(0){% else %}{{ page.link_bandcamp }}{% endif %}" target="_blank" rel="noopener">
             <img class="page-release__bandcamp-btn-img" src="{{ site.baseurl }}/assets/img/svg-icons/bandcamp.svg" alt="Bandcamp Icon">
             <span class="page-release__bandcamp-btn-text">Bandcamp</span>
           </a>
-          <a class="page-release__junodownload-btn{% if page.link_junodownload == null %} is-disabled{% endif %}" href="{% if page.link_junodownload == null %}javascript:void(0){% else %}{{ page.link_junodownload }}{% endif %}" target="_blank">
+          <a class="page-release__junodownload-btn{% if page.link_junodownload == null %} is-disabled{% endif %}" href="{% if page.link_junodownload == null %}javascript:void(0){% else %}{{ page.link_junodownload }}{% endif %}" target="_blank" rel="noopener">
             <img class="page-release__junodownload-btn-img" src="{{ site.baseurl }}/assets/img/svg-icons/junodownload.svg" alt="JunoDownload Icon">
             <span class="page-release__junodownload-btn-text">JunoDownload</span>
           </a>
@@ -120,7 +120,7 @@
       {% if page.link_bandcamp %}
         <p>
           {% comment %}<span>Donate:</span>{% endcomment %}
-          <a href="{{ page.link_bandcamp }}" target="_blank">
+          <a href="{{ page.link_bandcamp }}" target="_blank" rel="noopener">
             <span>Bandcamp</span>
           </a>
         </p>
@@ -130,7 +130,7 @@
     {% if page.link_ektoplazm %}
       <p>
         {% comment %}<span>Free Download:</span>{% endcomment %}
-        <a href="{{ page.link_ektoplazm }}" target="_blank">
+        <a href="{{ page.link_ektoplazm }}" target="_blank" rel="noopener">
           <span>Ektoplazm</span>
         </a>
       </p>
@@ -139,7 +139,7 @@
     {% if page.link_discogs %}
       <p>
         {% comment %}<span>Release Info:</span>{% endcomment %}
-        <a href="https://www.discogs.com/master/view/{{ page.link_discogs }}" target="_blank">
+        <a href="https://www.discogs.com/master/view/{{ page.link_discogs }}" target="_blank" rel="noopener">
           {% comment %}<span class="icon-discogs"></span>{% endcomment %}
           <span>Discogs</span>
         </a>
