--- a/_components/PageArtist/index.html
+++ b/_components/PageArtist/index.html
@@ -72,17 +72,25 @@
         <div id="vue-tabs">
           <vue-tabs>
             {% if page.youtube_id %}
-            <v-tab title="Youtube" icon="icon-youtube">
+            <v-tab title="YouTube" icon="icon-youtube">
               <div class="iframe-holder">
                 <div class="iframe-holder__ratio">
-                  <iframe class="iframe-holder__iframe" src="https://www.youtube.com/embed/videoseries?list={{ page.youtube_id }}" allowfullscreen></iframe>
+                  <iframe
+                    class="iframe-holder__iframe"
+                    src="https://www.youtube.com/embed/videoseries?list={{ page.youtube_id }}"
+                    title="{{ page.title }} YouTube Iframe"
+                  ></iframe>
                 </div>
               </div>
             </v-tab>
             {% endif %}
             {% if page.soundcloud_id %}
-              <v-tab title="Soundcloud" icon="icon-soundcloud">
-                <iframe src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/users/{{ page.soundcloud_id }}&amp;color=00aabb&amp;hide_related=true&amp;show_comments=true&amp;show_user=false&amp;sharing=false&amp;show_bpm=true" style="width:100%;height:500px;border:none;display:block"></iframe>
+              <v-tab title="SoundCloud" icon="icon-soundcloud">
+                <iframe
+                  src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/users/{{ page.soundcloud_id }}&amp;color=00aabb&amp;hide_related=true&amp;show_comments=true&amp;show_user=false&amp;sharing=false&amp;show_bpm=true"
+                  style="width:100%;height:500px;border:none;display:block"
+                  title="{{ page.title }} SoundCloud Iframe"
+                ></iframe>
               </v-tab>
             {% endif %}
             {% if page.facebook %}
@@ -90,8 +98,22 @@
                 {% comment %}
                 <!-- TODO: What is appId ??? -->
                 {% endcomment %}
-                <iframe class="facebook-widget facebook-widget--size-s" src="https://www.facebook.com/plugins/page.php?href={{ page.facebook }}%2F&tabs&width=287&height=214&small_header=false&adapt_container_width=true&hide_cover=false&show_facepile=true&appId=197035617008842" scrolling="no" frameborder="0" allowTransparency="true"></iframe>
-                <iframe class="facebook-widget facebook-widget--size-m" src="https://www.facebook.com/plugins/page.php?href={{ page.facebook }}%2F&tabs&width=500&height=214&small_header=false&adapt_container_width=true&hide_cover=false&show_facepile=true&appId=197035617008842" scrolling="no" frameborder="0" allowTransparency="true"></iframe>
+                <iframe
+                  class="facebook-widget facebook-widget--size-s"
+                  src="https://www.facebook.com/plugins/page.php?href={{ page.facebook }}%2F&tabs&width=287&height=214&small_header=false&adapt_container_width=true&hide_cover=false&show_facepile=true&appId=197035617008842"
+                  scrolling="no"
+                  frameborder="0"
+                  allowTransparency="true"
+                  title="{{ page.title }} Facebook Mobile Iframe"
+                ></iframe>
+                <iframe
+                  class="facebook-widget facebook-widget--size-m"
+                  src="https://www.facebook.com/plugins/page.php?href={{ page.facebook }}%2F&tabs&width=500&height=214&small_header=false&adapt_container_width=true&hide_cover=false&show_facepile=true&appId=197035617008842"
+                  scrolling="no"
+                  frameborder="0"
+                  allowTransparency="true"
+                  title="{{ page.title }} Facebook Desktop Iframe"
+                ></iframe>
               </v-tab>
             {% endif %}
             {% if page.discogs %}
