add menu-social.vue :v:

--- a/_components/MenuSocial/index.html
+++ b/_components/MenuSocial/index.html
@@ -1,5 +1,5 @@
 <div class="menu-social">
-  <div class="menu-social__caption">Follow Us:</div>
+  <menu-social></menu-social>
   <div class="menu-social__list">
     <a class="menu-social__link" href="https://sentimony.bandcamp.com" target="_blank" rel="noopener">
       <img class="menu-social__icon" src="{{ site.baseurl }}/assets/img/svg-icons/bandcamp.svg" alt="Bandcamp Icon">
