--- a/_components/PageRelease/index.html
+++ b/_components/PageRelease/index.html
@@ -20,19 +20,24 @@
 
       <div class="page-release__info">
         <div class="page-release__small-info">
-          <div class="page-release__catalog-number">{{ page.cat_nu }}</div> |
-          <div class="page-release__date">
-            {% if page.coming_soon %}
-              Coming at {{ page.release_date | date: '%Y' }}
-            {% else %}
-              {{ page.release_date | date_to_string }}
-            {% endif %}
-          </div>
-        </div>
-        <div class="page-release__small-info">
-          <div class="page-release__style">{{ page.style }}</div>
+          <span class="page-release__catalog-number">{{ page.cat_nu }}</span> |
+          {% if page.coming_soon %}
+            Coming at {{ page.release_date | date: '%Y' }}
+          {% else %}
+            {{ page.release_date | date_to_string }}
+          {% endif %}
         </div>
         <h1 class="page-release__title">{{ page.title }}</h1>
+        <div class="page-release__small-info">
+          {{ page.style }}
+          {% if page.total_time %}
+            | {{ page.total_time }}
+          {% endif %}
+        </div>
+        {% if page.total_time %}
+          <div class="page-release__small-info">
+          </div>
+        {% endif %}
         <div class="page-release__small-info">Get it:</div>
         <div>
           <a class="page-release__bandcamp-btn{% if page.coming_soon %} is-disabled{% endif %}" href="{% if page.coming_soon %}javascript:void(0){% else %}{{ page.link_bandcamp }}{% endif %}" target="_blank" rel="noopener">
