--- a/_components/BlockFooter/index.html
+++ b/_components/BlockFooter/index.html
@@ -24,10 +24,11 @@
     <div>Design by <a href="https://rooooster.com" target="_blank" rel="noopener">Anton Pivniuk</a></div>
   </div>
 
-
-  <router-link to="/">index1</router-link>
-  <router-link to="/news1/">news1</router-link>
-  <router-view></router-view>
+  <div>
+    <router-link to="/">index1</router-link> |
+    <router-link to="/news1/">news1</router-link>
+    <router-view></router-view>
+  </div>
 
   {% comment %}
   <div class="block-footer__versions">
