--- a/_components/Donate/index.html
+++ b/_components/Donate/index.html
@@ -1,5 +1,5 @@
-<div class="block-donate">
-  <div class="block-donate__wrapper">
+<div class="donate">
+  <div class="donate__wrapper">
     <p>Recently all Sentimony Records releases available for free download.<br>We will be grateful for your feedback at <a href="https://sentimony.bandcamp.com" target="_blank" rel="noopener">bandcamp</a>.</p>
     <p>Donations are very welcome!<br>It is not an easy mission to keep the free music flowing.</p>
     <p>Huge Thanks for Support!</p>
