rework MenuSocial via VueJS

--- a/_components/BlockFooter/index.html
+++ b/_components/BlockFooter/index.html
@@ -1,7 +1,7 @@
 <div class="block-footer">
 
   {% include MenuMain/index.html %}
-  {% include MenuSocial/index.html %}
+  <menu-social></menu-social>
 
   {% comment %}
   <div class="block-footer__labels">
