rename: Logolink, Hero & About components

--- a/_components/MainMenu/index.html
+++ b/_components/MainMenu/index.html
@@ -1,7 +1,7 @@
 <header class="main-menu">
   <div class="main-menu__container">
 
-  {% include BlockLogolink/index.html %}
+  {% include Logolink/index.html %}
 
   <nav class="main-menu__main-menu">
     <a href="{{ site.baseurl }}/release/zymosis-insight/" class="main-menu__main-menu-link{% if page.url contains 'release' %} is-selected{% endif %}">Releases</a>
