rework Logolink component via VueJS

--- a/_components/Header/index.html
+++ b/_components/Header/index.html
@@ -1,7 +1,7 @@
 <header class="header">
   <div class="header__container">
 
-  <logo-link></logo-link>
+  <logolink></logolink>
 
   <nav class="header__main-menu">
     <a href="{{ site.baseurl }}/release/zymosis-insight/" class="header__main-menu-link{% if page.url contains 'release' %} is-selected{% endif %}">Releases</a>
