--- a/_components/About/index.html
+++ b/_components/About/index.html
@@ -1,6 +1,6 @@
-<div class="block-about">
-  <div class="block-about__wrapper">
-    <p><img class="block-about__logo" src="{{ site.baseurl }}/assets/img/svg-icons/sentimony-records-logo.svg" alt="Sentimony Records Logo SVG"></p>
+<div class="about">
+  <div class="about__wrapper">
+    <p><img class="about__logo" src="{{ site.baseurl }}/assets/img/svg-icons/sentimony-records-logo.svg" alt="Sentimony Records Logo SVG"></p>
     <p>Sentimony Records is an independent record label started in Kyiv, Ukraine during the autumn 2006 by Ihor Orlovskyi also known as <a href='/artist/irukanji'>Irukanji</a>.</p>
     <p>The main label's mission is to contribute the growth of the psychedelic chillout and trance scenes.</p>
   </div>
