rework MenuMain component via VueJS

--- a/_components/Footer/index.html
+++ b/_components/Footer/index.html
@@ -1,6 +1,6 @@
 <div class="footer">
 
-  {% include MenuMain/index.html %}
+  <menu-main></menu-main>
   <menu-social></menu-social>
 
   {% comment %}
