--- a/_components/ReleaseListSwiper/index.html
+++ b/_components/ReleaseListSwiper/index.html
@@ -1,5 +1,5 @@
 <div class="release-list-swiper {{ include.class}}">
-  <div class="release-list-swiper__title">Our releases</div>
+  <release-list-swiper></release-list-swiper>
   <div class="swiper-container release-list-swiper__container">
     <div class="swiper-wrapper">
       {% for i in site.categories.releases %}
