--- a/_pages/artists.html
+++ b/_pages/artists.html
@@ -11,14 +11,14 @@ og-image: https://content.sentimony.com/assets/img/og-images/sentimony/home.jpg
   {% for i in artists %}
     {% if i.published == true %}
       <div>
-        {% if i.photo_cover %}
+        {% if i.photo %}
           <p>
             <a href="{{ i.url }}">
-              <img class="photo-cover" src="{{ i.photo_cover }}" alt="{{ i.title }}">
+              <img class="artist-list__photo" src="https://content.sentimony.com/assets/img/artists/small/{{ i.slug }}.jpg" alt="{{ i.title }}">
             </a>
           </p>
         {% endif %}
-        <p><a href="{{ i.url }}">{{ i.title }}</a></p>
+        <p class="artist-list__title"><a href="{{ i.url }}">{{ i.title }}</a></p>
       </div>
     {% endif %}
   {% endfor %}
