--- a/_components/SwiperArtistList/index.html
+++ b/_components/SwiperArtistList/index.html
@@ -6,8 +6,8 @@
         {% include SwiperArtistListItem/index.html %}
       {% endfor %}
     </div>
-    <div class="swiper-artist-list__prev"></div>
-    <div class="swiper-artist-list__next"></div>
-    <div class="swiper-scrollbar"></div>
+    <div class="swiper-artist-list__prev js-swiper-artist-list__prev"></div>
+    <div class="swiper-artist-list__next js-swiper-artist-list__next"></div>
+    <div class="swiper-scrollbar swiper-artist-list__scrollbar js-swiper-artist-list__scrollbar"></div>
   </div>
 </div>
