rework: scss goes into vue components

--- a/_components/PageArtist/index.html
+++ b/_components/PageArtist/index.html
@@ -1,5 +1,5 @@
 <div class="page-artist">
-  {% include SVG/deco-triangle.svg %}
+  <svg-triangle></svg-triangle>
 
   <div class="page-artist__wrapper">
 
