--- a/_components/PageRelease/index.html
+++ b/_components/PageRelease/index.html
@@ -1,5 +1,5 @@
 <div class="page-release">
-  {% include SVG/deco-triangle.svg %}
+  <svg-triangle></svg-triangle>
 
   <div class="page-release__wrapper">
 
