rework Releases & Artists pages via VueJS :elephant:

--- a/_pages/artists.html
+++ b/_pages/artists.html
@@ -2,7 +2,7 @@
 layout: page
 title: Artists
 description: Artists of Sentimony Records
-permalink: /artists/
+permalink: /spa/artists/
 og-image: https://content.sentimony.com/assets/img/og-images/sentimony/home.jpg
 ---
 
