--- a/_components/SwiperArtistList/swiper-artist-list.html
+++ b/_components/SwiperArtistList/swiper-artist-list.html
@@ -1,9 +1,9 @@
 <div class="swiper-artist-list {{ include.class}}">
-  <swiper-artist-list></swiper-artist-list>
+  <div class="swiper-artist-list__title">Artists</div>
   <div class="swiper-container swiper-artist-list__container">
     <div class="swiper-wrapper">
       {% for i in site.categories.artists %}
-        {% include SwiperArtistListItem/index.html %}
+        {% include SwiperArtistList/swiper-artist-list-item.html %}
       {% endfor %}
     </div>
     <div class="swiper-artist-list__prev js-swiper-artist-list__prev"></div>
